Added intro to Design chapter and a few edits to the protocol design section.

--- a/TP3/dissertation/Design/design.tex
+++ b/TP3/dissertation/Design/design.tex
@@ -1,7 +1,7 @@
 \chapter{Design}
 \label{design}
 
-%TODO: Chapter introduction
+The following chapter explains how we designed the system. As it is the most crucial part of the project, the protocol design will be explained first. Without a protocol that worked well, our system would not have been functional. Then the client and server design will be explained in detail, discussing how we've chosen to model the system. The last section will discuss in more detail how the networking between client and server was designed.
 
 \input{Design/protocol.tex}
 
