wrote a wee bit

--- a/TP3/dissertation/Evaluation/client.tex
+++ b/TP3/dissertation/Evaluation/client.tex
@@ -1,6 +1,8 @@
 \section{Client Evaluation}
 \label{client_eval}
 
+The key aspect of an instant messaging client is ensuring messages get delivered to the correct person, and in the case of incoming messages, to the correct window. It was necessary to establish a way of proving that this worked in every case. This is difficult to prove, as messages took a complicated path through the system. For instance, when a message is received by the network component, a method in the 
+
 
 
 
