wrote slightly more

--- a/TP3/dissertation/Evaluation/client.tex
+++ b/TP3/dissertation/Evaluation/client.tex
@@ -1,7 +1,7 @@
 \section{Client Evaluation}
 \label{client_eval}
 
-The key aspect of an instant messaging client is ensuring messages get delivered to the correct person, and in the case of incoming messages, to the correct window. It was necessary to establish a way of proving that this worked in every case. This is difficult to prove, as messages took a complicated path through the system. For instance, when a message is received by the network component, a method in the 
+The key aspect of an instant messaging client is ensuring messages get delivered to the correct person, and in the case of incoming messages, to the correct window. It was necessary to establish a way of proving that this worked in every case. This is difficult to prove, as messages take a complicated path through the system. For instance, when a message is received by the network component, a method in the controller is called, which then finds the window corresponding to the sender. In some cases, the delivery of a message has to wait until a window has been created by the Swing thread. The difficulty of proving a message has been delivered was illustrated by the different behaviour of our program in different environments. During the christmas break, work was being conducted on our home computers (running windows and linux), where we found no evidence of messages being dropped in our day to day experience running the program. Upon returning to the university, the first message received was dropped approximately half the time - and an empty chat window appeared. As discussed in the 'collaboration' section, we discovered this was a threading issue - where the networking thread 'overtook' the GUI thread in attempting to route the message before the window was created. We were able to discover this by using debugging messages at each stage stage in the message routing process and in the window creation process, to determine where the fault was. The importance 
 
 
 
